[package]
name = "doi2bib"
version = "0.2.2"
description = "Generate a bibtex entry from a doi."
readme = "README.md"
repository = "https://github.com/OpenByteDev/doi2bib" 
homepage = "https://github.com/OpenByteDev/doi2bib"
documentation = "https://docs.rs/doi2bib"
license = "MIT"
authors = ["OpenByte <development.openbyte@gmail.com>"]
edition = "2024"
categories = []
keywords = ["doi", "bibtex", "bibliography", "biblatex"]

[dependencies]
reqwest = "0.12"
regex = "1.11"

[dev-dependencies]
tokio = { version = "1.46", features = ["macros", "rt"] }
biblatex = "0.10"
